--- a/qutebrowser/.config/qutebrowser/homepage.html
+++ b/qutebrowser/.config/qutebrowser/homepage.html
@@ -19,7 +19,7 @@
                 <div class="bookmark-title">Main</div>
                 <div class="bookmark-inner-container">
                     <a class="bookmark" href="https://youtube.com">Youtube</a>
-                    <a class="bookmark" href="https://pdalife.com">PdaLife</a>
+                    <a class="bookmark" href="https://pdalife.to">PdaLife</a>
                     <a class="bookmark" href="https://vk.com/im">VK</a>
                     <a class="bookmark" href="https://e.mail.ru/inbox">Mail.ru</a>
                 </div>
